--- a/drag-drop-swipe-recyclerview-sample/src/main/res/values/strings.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Drag-Drop-Swipe-RecyclerView Sample</string>
+    <string name="app_name">MoveMedical RecyclerView Sample</string>
     <string name="title_vertical_list">Vertical</string>
     <string name="title_horizontal_list">Horizontal</string>
     <string name="title_grid_list">Grid</string>
